modified example to make tasks in rakefile show up in description

--- a/rakefile
+++ b/rakefile
@@ -19,4 +19,6 @@ def solution
   @solution
 end
 
+desc 'Clean, copy dependencies, build release and run tests'
 task :default => [:clean, :copy_libs, :build_release, :nunit]
+
